<resources>
    <string name="app_name">Dish Calculator</string>
    <string name="button_start">Начать</string>
    <string name="about">О Приложении</string>
    <string name="exit">Выйти</string>
    <string name="savedText">Списки</string>
    <string name="add">Добавить</string>
    <string name="about_info">Создатель этого приложения был вдохновлён поездкой в Гродно</string>
    <string name="start_info">Выберите количество человек</string>
    <string name="next">Далее</string>
    <string name="preset_light">Бедный студент</string>
    <string name="preset_medium">Приехал к бабушке</string>
    <string name="preset_hard">Решил устроить свадьбу</string>
    <string name="pref_name">MODE</string>
    <string name="NameProd">Введите имя продукта</string>
    <string name="PortionProd">Выберите порцию</string>
    <string name="products">Продукты</string>
    <string name="enterNameOfFile">Введите имя файла</string>
    <string name="create">Создать</string>
    <string name="showList">Показать список</string>
    <string name="back">Обратно</string>
    <string name="delete">Удалить</string>
    <string name="createPdf">Созадать PDF</string>
    <string name="listsOfProd">Списки продуктов</string>
    <string name="toast1">Выберите больше людей</string>
    <string name="toast2">Выбирите большую порцию</string>
    <string name="toast3">Введите имя</string>
    <string name="toast4">Продукт удален</string>
    <string name="toast5">Выберите продукты, которые хотите добавить в список</string>
    <string name="toast6">Выберите продукты, которые хотите удалить из списка</string>
    <string name="toast7">Some file problems</string>
    <string name="toast8">Install pdf reader</string>
</resources>
