<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.HomeActivity"
    android:orientation="vertical"
    android:gravity="center"
    >


    <Button
        android:id="@+id/buttonStart"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="124dp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="348dp" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

    <Button
        android:id="@+id/buttonSavedList"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:text="@string/savedText"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="348dp" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="289dp" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="348dp" />

</LinearLayout>

