<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Activity.AddProductActivity">

    <EditText
        android:id="@+id/enterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NameProd"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/PortionProd"
        android:textAlignment="center" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/portionSeekbarText"
        android:layout_width="92dp"
        android:layout_height="39dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/productAddButton"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/add" />

</LinearLayout>